# router-manager-tray

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build.yml
router-core/: Cargo.toml
router-core/src/: lib.rs
router-tray/src-tauri/: Cargo.toml  tauri.conf.json
router-tray/src-tauri/src/: main.rs
router-tray/ui/: app.js  index.html  style.css
