[package]
name = "router-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
ipnetwork = "0.20"
pnet = "0.34"
