[package]
name = "router-tray"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
keyring = "2"
directories = "5"
router-core = { path = "../../router-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
